--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1>HOME</h1>
-<h2><%= @title %></h2>
+<h2><%= @article. title %></h2>
+<h2><%= @article. content %></h2>
 
 <h2><%= link_to 'about', about_path %></h2>
 
