--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -12,7 +12,7 @@ $back-icon-size: 16px;
   padding: $header-padding-y 16px;
   font-weight: bold;
 
-  &_logs {
+  &_logos {
     min-width: 0;
     display: flex;
 
