--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,4 +1,4 @@
-= link_to article_path(id:article.id) do
+= link_to article_path(article) do
   .card
     .card_image
       = image_tag 'eyecatch1.png'
@@ -11,5 +11,6 @@
       .card_detail
         = image_tag 'default-avatar.png'
         %div
-          %p cohki0305
+          - if article.user.present? 
+            %p= article.author_name
           %p= article.display_created_at
