--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,15 +3,16 @@
   .article_detail
     = image_tag 'default-avatar.png'
     %div
-      %p cohki0305
+      - if @article.user.present?
+      %p= @article.author_name
       %p= @article.display_created_at
-    - if user_signed_in?      
+    - if user_signed_in? && current_user.has_written?(@article)
       .article_detail_actions
         .dropdown
-          = image_tag 'actions.svg', class: 'dropbtn'  
-            .dropdown-content.mini
-              = link_to '編集する', edit_article_path(@article)
-              = link_to '削除する', article_path(@article), data: {method: 'delete', confirm: '本当に削除してもよろしいですか？'}
+          = image_tag 'actions.svg', class: 'dropbtn'
+          .dropdown-content.mini
+            = link_to '編集する', edit_article_path(@article)
+            = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除してもよろしいですか？' }
   .article_content
     = @article.content
   .article_heart
