--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -11,6 +11,6 @@
       .card_detail
         = image_tag 'default-avatar.png'
         %div
-          - if article.user.present? 
-            %p= article.author_name
+          - if article.user.present?
+            %p= article.user.display_name
           %p= article.display_created_at
