--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -15,8 +15,7 @@
     %div 
       = f.label :gender, '性別'
     %div 
-      = f.select :gender, Profile.genders.keys, {}, { class: 'text' }
-    %div 
+      = f.select :gender, Profile.genders.map { |k, v| [ I18n.t("enum.genders.#{k}"), k ] },{}, { class:'text' }
       = f.label :birthday, '生年月日'
     %div 
       = f.date_field :birthday, class: 'text'
