--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -32,7 +32,10 @@
     -#   %p= comment.content
 
 .container
-  = link_to new_article_comment_path(@article) do
+  .btn-secondary.show-comment-form
+    コメントを追加
+  .comment-text-area.hidden
+    = text_area_tag :comment_content, '', class: 'sm'
     .btn-secondary
       コメントを追加
 
